--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -8,11 +8,10 @@
 /* Color palette*/
 /*
     https://huemint.com/back-gradient-2/#palette=6ae3f1-fffcfa-ffa3a3
-    primary = #6ae3f1 - cyan
+    primary = #1baeb5 - cyan
     secondary = #fffcfa - white
     tertiary = #ffa3a3 - pink 
 */
-
 a{
     text-decoration: none;
     color: #fffcfa;
@@ -25,18 +24,14 @@ li{
     list-style: none;
 }
 
-/* Body */
-
-
-/* Header */
-header{
+body{
     position: relative;
     background-image: url(/asset/images/marc-doucakis-IhXYfHEbN5c-unsplash.jpg);
-    height: 100vh;
+    height: 50vh;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    color: #fffcfa;
+    color: #000000;
 }
 nav{
     width: 100%;
@@ -70,22 +65,52 @@ nav{
     border: #fffcfa solid 1px;
     border-radius: 5px;
 }
+.button-searchform{
+    padding: 8px 40px;
+    border: #fffcfa solid 1px;
+    border-radius: 5px;
+}
 .button-connection:hover{
-    padding: 8px 10px;
     border: #ffa3a3 solid 1px;
-    border-radius: 5px; 
 }
 .button-connection:hover a{
     color: #ffa3a3;
 }
+.button-searchform:hover{
+    background-color: #1baeb5;
+}
+.button-searchform:hover a{
+    color: #fffcfa;
+}
+
+
 .burger-menu-button{
     font-size: 2rem;
     cursor: pointer;
     display: none;
+    color: #fffcfa;
 }
 .my-burger-menu{
     display: none;
 }
+
+/* Main */
+.card-text{
+    text-align: justify;
+}
+
+.card-price{
+    color: #ffa3a3;
+}
+.my-searchform{
+    width: 80%;
+    margin-top: 140px;
+    padding: 20px;
+    background-color: #ffa3a3e1;
+    gap: 10px;
+    border-radius: 10px;
+}
+
 
 
 /* ------ Responsive -------- */
@@ -102,10 +127,16 @@ nav{
     }
     .my-burger-menu{
         width: 100%;
+        height: 0;
         display: flex;
         flex-direction: column;
         align-items: center;
+        transition: height 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+        overflow: hidden;
         /* backdrop-filter: blur(3px); */
+    }
+    .my-burger-menu.open{
+        height: 220px;
     }
     .my-burger-menu .my-links{
         display: flex;
@@ -117,5 +148,14 @@ nav{
         border-top: #fffcfa solid 1px;
         width: 30%;
         margin: 10px auto 20px auto;
-    }    
+    } 
+    .baseline h1{
+        font-size:1.6rem;
+    } 
+    .my-searchform{
+        width: 80%;
+        flex-direction: column;
+        align-items: flex-end;
+        margin-top: 20px;
+    }  
 }
